Slightly clarifying where data is sent in comments

--- a/resources/fixtures.js.template
+++ b/resources/fixtures.js.template
@@ -1,20 +1,20 @@
 // Provide information about all fixtures
 var fixtures = {
-    // Fixture ID
+    // Fixture ID - sent to RabbitMQ
     houseFlood: {
         name: "House flood", // Fixture name to appear in interface
         colour: {
-            // id: ["Name which appears to screen readers", "Data sent to server", "Hex value for button colour"]
+            // id: ["Name which appears to screen readers", "Data sent to RabbitMQ", "Hex value for button colour"]
             red: ["Red", "red", "FF0000"],
             orange: ["Orange", "orange", "FCAE05"],
         },
         position: {
-            // id: ["Button Text", "Data sent to server"]
+            // id: ["Button Text", "Data sent to RabbitMQ"]
             up: ["Up", "up"],
             down: ["Down", "down"],
         },
         effect: {
-            // id: ["Button Text", "Data sent to server"]
+            // id: ["Button Text", "Data sent to RabbitMQ"]
             none: ["None", "none"],
             strobeFast: ["Strobe Fast", "Strobe Fast"],
             strobeSlow: ["Strobe Slow", "Strobe Slow"],
@@ -28,21 +28,21 @@ var fixtures = {
         }
     },
 
-   // Fixture ID
+   // Fixture ID - sent to RabbitMQ
    houseFlood: {
        name: "House flood", // Fixture name to appear in interface
        colour: {
-           // id: ["Name which appears to screen readers", "Data sent to server", "Hex value for button colour"]
+           // id: ["Name which appears to screen readers", "Data sent to RabbitMQ", "Hex value for button colour"]
            red: ["Red", "red", "FF0000"],
            orange: ["Orange", "orange", "FCAE05"],
        },
        position: {
-           // id: ["Button Text", "Data sent to server"]
+           // id: ["Button Text", "Data sent to RabbitMQ"]
            up: ["Up", "up"],
            down: ["Down", "down"],
        },
        effect: {
-           // id: ["Button Text", "Data sent to server"]
+           // id: ["Button Text", "Data sent to RabbitMQ"]
            none: ["None", "none"],
            strobeFast: ["Strobe Fast", "Strobe Fast"],
            strobeSlow: ["Strobe Slow", "Strobe Slow"],
