RabbitMQ queue, exchange, and routing key are now handled in config file

--- a/config.php.template
+++ b/config.php.template
@@ -6,6 +6,15 @@ return array(
     "rabbitUser" => "",
     "rabbitPassword" => "",
 
+    // RabbitMQ destination details
+    "rabbitQueueName" => "",
+    "rabbitQueuePassive" => "false",
+    "rabbitQueueDurable" => "false",
+    "rabbitQueueExclusive" => "false",
+    "rabbitQueueAutoDelete" => "false",
+    "rabbitExchange" => "",
+    "rabbitRoutingKey" => "",
+
     // File name for queue SQLite database
     "queueSQLite" => "queue.db",
 
