--- a/config.php.template
+++ b/config.php.template
@@ -20,6 +20,8 @@ return array(
 
     // Duration of time someone has in live mode, in seconds
     "liveDuration" => 120,
+    // How many seconds before the end of the person's session to warn them that their time is almost up
+    "expiryWarning" => 30,
 
     // After how many seconds of receiving no commands should the user be warned that their session will be ended
     "inactivityWarning" => 40,
